# coursework-project

./: CMakeLists.txt  CourseWork.h  CourseWorkApp.C  CourseWorkApp.h  Lecturer.h  MarkEntryWidget.C  MarkEntryWidget.h  MarkGradeWidget.C  MarkGradeWidget.h  README.md  Session.C  Session.h  Student.h  Student_Grade.db  User.C  User.h  coursework  coursework.C  coursework.db  strings.xml  wt_config.xml
OLD/: crswrk.h_ori  hangman.db
css/: coursework.css
